Auth bugs fixing (CORS) - fixed